alignemt fix for footer tnak you msg

--- a/style.css
+++ b/style.css
@@ -294,6 +294,7 @@ h2 {
 }
 
 .footer-thanks {
+  margin-top: 1rem;
   color: #ababab;
   text-align: center;
 }
